<resources>
    <string name="app_name">PZC</string>
    <string name="register">注册</string>
    <string name="image_logo">图标</string>
    <string name="ic_account">用户名</string>
    <string name="ic_password">密码</string>
    <string name="bt_login">登录</string>
    <string name="et_account_hint">请输入用户名</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="tv_register">注册账号</string>
    <string name="tv_spare">｜</string>
    <string name="tv_forgetPassword">忘记密码？</string>

    <string name="content_user_no_exist">该用户不存在</string>

    <string name="bt_to_register_page2">下一步</string>
    <string name="bt_back">返回</string>
    <string name="tv_phone">手机号码</string>

    <string name="register_check_password_hint">请再输入一次密码</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="tv_register_page2_title">完善信息</string>
    <string name="tv_register_page2_name"> 姓名</string>
    <string name="tv_register_page2_department">系别</string>
    <string name="tv_register_page2_major">专业</string>
    <string name="tv_register_page2_classes">班级</string>
    <string name="register_name_hint">请输入真实姓名</string>
    <string name="register_major_hint">请输入所在专业</string>
    <string name="register_classes_hint">请输入所在班级</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_nav_information">通知</string>
    <string name="bottom_nav_student_union">学生组织</string>
    <string name="bottom_nav_my">我的</string>

    <string name="info_author">作者：</string>
    <string name="info_hits">点击数</string>
    <string name="info_create_time">发布时间：</string>
    <string name="info_start_time">举办/截止时间：</string>
    <string name="info_hold_organization">举办部门：</string>

    <string name="paging_loading">加载中…</string>

    <string name="tab_organization">学生组织</string>
    <string name="tab_activities">活动</string>
    <string name="tab_enroll_member">申请名单</string>
    <string name="tab_member">成员名单</string>

    <string name="info_activities_state">活动状态：</string>
    <string name="info_activities_state_ongoing">进行中</string>
    <string name="info_activities_state_end">已结束</string>
    <string name="info_activities_state_long">长期有效</string>
    <string name="info_activities_enroll">报名</string>
    <string name="info_activities_enrolled">待审核</string>
    <string name="info_activities_enrolled_success">报名成功</string>
    <string name="info_activities_member">报名人员</string>
    <string name="info_activities_summary">总结</string>

    <string name="info_organization_enroll_full">加入部门数量达到上限</string>
    <string name="info_organization_number_of_people_text">部门人数</string>
    <string name="info_organization_enroll_text">纳新状态：</string>
    <string name="info_organization_state_ongoing">纳新中</string>
    <string name="info_organization_state_end">未开始</string>
    <string name="info_organization_member">部门成员</string>
    <string name="info_organization_title">部门名称：</string>
    <string name="info_organization_person_in_charge_title">部门负责人：</string>
    <string name="info_organization_description_title">部门简介：</string>
    <string name="info_organization_person_in_charge_position_title">负责人职位：</string>

    <string name="info_edit">编辑</string>
    <string name="info_save">保存</string>
    <string name="info_check_save">确认保存？</string>
    <string name="info_cancel">取消</string>

    <string name="info_not_more">没有更多了</string>

    <string name="bt_enroll_refuse">拒绝</string>
    <string name="bt_enroll_ok">同意</string>
    <string name="info_activities_title">活动名称：</string>
    <string name="info_activities_description">活动简介：</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="info_my_enroll_organization">我加入的学生组织</string>
    <string name="info_my_hold_activities">我发起的活动</string>
    <string name="info_exit">退出登录</string>
    <string name="info_settings">设置</string>
    <string name="info_my_enroll_activities">我参加的活动</string>


</resources>
